--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-.container-fluid {
-  width: 100%;
-}
-
-.container {
-  width: 100%;
-  margin: 0 auto;
-}
-
-.hidden-xs {
-  display: none;
-}
-
 .header-main-fluid {
   width: 100%;
   background-image: -webkit-gradient(linear, left top, right bottom, from(#3dcdbc), color-stop(#2bc3c0), color-stop(#22b8c2), color-stop(#27adc1), to(#33a2bd));
@@ -1007,4 +987,24 @@
     display: none;
   }
 }
-/*# sourceMappingURL=style.css.map */
+
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.container-fluid {
+  width: 100%;
+}
+
+.container {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.hidden-xs {
+  display: none;
+}
+/*# sourceMappingURL=main.css.map */
